--- a/Download/Download/Base.lproj/Main.storyboard
+++ b/Download/Download/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Download" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,8 +21,40 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OSV-QZ-jFU">
+                                <rect key="frame" x="171.5" y="369" width="31" height="30"/>
+                                <state key="normal" title="stop"/>
+                                <connections>
+                                    <action selector="stopBtnDidClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UjV-97-mhf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UpW-yd-Kic">
+                                <rect key="frame" x="171" y="319" width="32" height="30"/>
+                                <state key="normal" title="start"/>
+                                <connections>
+                                    <action selector="startBtnDidClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="doM-JN-qCf"/>
+                                </connections>
+                            </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="yqL-Re-FTR">
+                                <rect key="frame" x="36" y="100" width="303" height="2"/>
+                            </progressView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="yqL-Re-FTR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="7ow-0Z-jz1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yqL-Re-FTR" secondAttribute="trailing" constant="20" id="IFQ-CI-7nQ"/>
+                            <constraint firstItem="OSV-QZ-jFU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Nhk-CX-Ng7"/>
+                            <constraint firstItem="yqL-Re-FTR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="80" id="QVh-HQ-fRT"/>
+                            <constraint firstItem="OSV-QZ-jFU" firstAttribute="top" secondItem="UpW-yd-Kic" secondAttribute="bottom" constant="20" id="Xrr-R9-nH3"/>
+                            <constraint firstItem="UpW-yd-Kic" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="buy-Np-k76"/>
+                            <constraint firstItem="UpW-yd-Kic" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="c9I-xv-5eJ"/>
+                            <constraint firstItem="yqL-Re-FTR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oTj-Jj-mbU"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="progressView" destination="yqL-Re-FTR" id="QVc-8E-1YA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
